<resources>
    <string name="app_name">Painel: Mr. Delivery</string>
    <string name="painel_pedidos">Painel de pedidos</string>
    <string name="sem_pedidos_no_painel">Você ainda não possui novos pedidos, assim que tiver um novo pedido será mostrado por aqui, os demais pedidos abra para ver.</string>
    <string name="cardapio_pedidos">Cardápio (Menu restaurante)</string>
    <string name="cardapio_painel">Adicione novos lanches, remova, atualize e mantenha seu menu sempre atualizado com novidades.</string>
    <string name="anuncios_pedidos_painel">Adicione anúncios para o publico ver as novidades do seu estabelecimento, mantenha seus anúncios atualizados ara atrair clientes.</string>
    <string name="anuncios_pedidos_title">Anúncios</string>
    <string name="cupons_pedidos_title">Cupons</string>
    <string name="cupons_pedidos_painel">Gerencie seus cupons, adicione, remova, ative, atualize e mantenha sempre atualizado com seus clientes.</string>
    <string name="estabelecimento">Estabelecimento</string>
    <string name="aberto">Aberto</string>
    <string name="fechado">Fechado</string>
    <string name="historicos_pedidos_title">Históricos de pedidos</string>
    <string name="historicos_pedidos_painel">Aqui fica todos os históricos de todos os clientes, se você apagar um histórico aqui o histórico do cliente também será apagado.</string>
    <string name="config_pedidos_title">Seu estabelecimento (Config)</string>
    <string name="config_pedidos_painel">Configure seu estabelecimento, e-mail, telefone, WhatsApp, localização entre outro, deixe seu estabelecimento bem configurado para que os clientes possam manter contatos com vocês.</string>
    <string name="carrinho_erro_conexao">Sem conexão com a internet</string>
    <string name="sem_historicos">Não há históricos aqui!</string>
    <string name="aguarde">Aguarde...</string>
    <string name="deletar_do_historico">Apagar o item dos hitóricos</string>
    <string name="deletar_historico">Apagar histórico</string>
    <string name="delete_historico_msg">Se você apagar este histórico o cliente que fez este pedido também vai der o histórico apagado no app dele.</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="historico_deletado">Histórico apagado com sucesso!</string>
    <string name="historico_deletado_erro">Não conseguimos apagar este histórico</string>
    <string name="e_mais">e mais</string>
    <string name="pedido_entregue">Pedido entregue</string>
    <string name="pedido_cancelado">Pedido cancelado</string>
    <string name="erro_gps_rota">Não conseguimos uma rota com as informações passadas</string>
    <string name="sair_titulo">Sair do aplicativo</string>
    <string name="sair_msg">Se sair do aplicativo será apagado todas as informações da conta, assim ao retornar será preciso efetuar um novo login.</string>
    <string name="sair_msg_sucesso">Você saiu com sucesso!</string>
    <string name="sem_cupons">Não há cupons</string>
    <string name="vencimento">Vencimento:</string>
    <string name="cupom_valido">Cupom valido</string>
    <string name="cupom_frete_grates">Cupom de frete grátis</string>
    <string name="cupom_desconto">Cupom de desconto</string>
    <string name="msg_aberto">Deseja abrir seu\nestabelecimento?Enquanto ele ficar aberto você ira receber novos pedidos, em qualquer momento você fechar. Use esta opção para fechar e abrir a possibilidade de receber novos pedidos.</string>
    <string name="fechar_estabelecimento">Fechar o estabeleciemtno</string>
    <string name="abrir_estabelecimento">Abrir o estabelecimento</string>
    <string name="abrir_estabelecimento_msg">Ao abrir o estabelecimento, os clientes vão poder enviar novos pedidos, caso não queira receber novos pedidos mantenha o estabelecimento fechado.</string>
    <string name="fechar_estabelecimento_msg">Fechar o estabelecimento para novos pedidos, ao fechar seu estabelecimento você não vai receber novos pedidos, se deseja receber os pedidos, mantenha aberto.</string>
    <string name="vencimento_expirado">Este cupom expirou</string>
    <string name="sem_uso_do_cupom">Cupom sem uso</string>
    <string name="um_uso_cupom">usado</string>
    <string name="usados_cupom">usados</string>
    <string name="codigo">Código:</string>
    <string name="tipo">Tipo:</string>
    <string name="cupom_ativo">Cupom ativo</string>
    <string name="cupom_desativo">Cupom desativado</string>
    <string name="cupom_alluser">Cupom para todos os usuários</string>
    <string name="cupom_not_alluser">Cupom para cliente especiais</string>
    <string name="cupom_invalido">Cupom invalido</string>
    <string name="desativar_cupom">Desativar cupom</string>
    <string name="ativar_cupom">Ativar cupom</string>
    <string name="deletar_do_cupom">Apagar este item dos cupons</string>
    <string name="cupom_deletado_sucesso">Cupom apagado com sucesso!</string>
    <string name="cupom_deletado_falha">Não conseguimos apagar o cupom</string>
    <string name="confirmar_delete">Confrima que deseja apagar?</string>
    <string name="delete">Apagar</string>
    <string name="add_codigo_cupom_info">Adicione um código de 6 dígitos do seu cupom</string>
    <string name="cupom_alluser_op">Cupom disponível para todos os clientes</string>
    <string name="cupom_validade_op">Cupom com data de vencimento</string>
    <string name="cupom_minumo_valor_op">Cupom com valor mínimo para uso</string>
    <string name="op_cupom_info">Opções para o cupom</string>
    <string name="type_cupom_info">Tipo de cupom</string>
    <string name="cupom_desconto_reais">Cupom de desconto em dinheiro</string>
    <string name="cupom_desconto_porcentagem">Cupom com desconto em porcentagem</string>
    <string name="adiciona_email">Adicionar e-mail</string>
    <string name="add_mail">Adicione o e-mail no campo em brando antes de criar outro</string>
    <string name="op_emais_add_info">Adicione os e-mails dos clientes que deseja liberar os cupons</string>
    <string name="op_valor_minimo_info">Adicione o valor mínimo para usar o cupom</string>
    <string name="op_validade_info">Adicione a data de validade do seu cupom</string>
    <string name="op_valor_dinheiro">Adicione o valor do desconto do seu cupom</string>
    <string name="error_digite_porcentagem">Digite a porcentagem</string>
    <string name="error_digite_porcentagem_max">A porcentagem pode ser no máximo ate 100%</string>
    <string name="digite_codigo_erro">Digite o código do cupom</string>
    <string name="digite_codigo_erro_max">O código do cupom precisa conter 6 digitos</string>
    <string name="alluser_email_erro">Adicione algum endereço de e-mail para continuar</string>
    <string name="alluser_email_valido">Digite um endereço de e-mail valido</string>
    <string name="error_data_ja_expirada">A data de validade já esta expirada</string>
    <string name="error_data_no_digitada">Adicione uma data de validade</string>
    <string name="selected_cupom_type">Selecione um tipo de cupom</string>
    <string name="falha_add_cupom">Não foi possivel adicionar o cupom</string>
    <string name="cupom_enviado">Cupom adicionado com sucesso!</string>
    <string name="confirmar_ativar_cupom">Realmente deseja ativar o cupom?</string>
    <string name="confirmar_desativar_cupom">Realmente deseja desativar</string>
    <string name="cupom_ativado_sucesso">Cupom ativado com sucesso!</string>
    <string name="cupom_desativado_sucesso">Cupom desativado com sucesso!</string>
    <string name="cupom_desativado_falha">Falha ao desativar cupom</string>
    <string name="cupom_ativado_falha">Falha ao ativar o cupom</string>
    <string name="sem_anuncios">Sem anúncios, clique em + para adicionar um novo</string>
    <string name="sem_conexao">Sem conexão com a internet</string>
    <string name="ordenar">ordenar</string>
    <string name="publicar_anuncio">Deseja publicar este anúncio?</string>
    <string name="file_mull">O arquivo escolhido é nulo</string>
    <string name="falha_enviar_imagem_em_storage">Falha ao enviar imagem</string>
    <string name="error_publicar_anuncio">Não foi possivel adicionar o anúncio</string>
    <string name="anuncio_postado">Anúncio publicado com sucesso!</string>
    <string name="anuncio_deletado">Anúncio deletado com sucesso!</string>
    <string name="error_deletar_anuncio">Não conseguimos deletar seu anúncio</string>
    <string name="delete_canuncio_msg">Tem certeza que deseja apagar o anúncio?</string>
    <string name="tipo_anuncio">Selecione o tipo do anúncio que deseja criar.</string>
    <string name="anuncio_720x720">"Anúncio 720x720 um anúncio em formado quadrado."</string>
    <string name="selectec_anuncio_720x720">Selecionar anúncio 720x720</string>
    <string name="anuncio_720x405">"Anúncio 720x405 um anúncio em formado retangular na horizontal."</string>
    <string name="selectec_anuncio_720x405">Selecionar anúncio 720x405</string>
    <string name="anuncio_720x1280">"Anúncio 720x1280 um anúncio em formado retangular na vertical."</string>
    <string name="selectec_anuncio_720x1280">Selecionar anúncio 720x1280</string>
    <string name="anuncio_personalizado">Fazer um anúncio com tamanho personalizado.</string>
    <string name="selectec_anuncio_personalizado">Anúncio personalizado</string>
    <string name="ordenado_successOrd">Ordenado com sucesso!</string>
    <string name="ordenado_success">Ordenado com sucesso!</string>
    <string name="ordenado_falha">Falha ao ordenar</string>
    <string name="sem_dados">Não foi encontrado nenhum dado sobre seu estabelecimento</string>
    <string name="config_distancia_max">Distancia maxima de entrega por Km</string>
    <string name="adicionar">Adicionar</string>
    <string name="summary_config">Estas configurações são importantes para seu estabelecimento funcionar e para seus clientes poderem entrar em contato com vocês.</string>
    <string name="config_taxas_entregas">Taxas de entrega</string>
    <string name="config_taxa_fixa">Taxa fixa</string>
    <string name="selecionar">Selecionar</string>
    <string name="config_taxa_quilometros">Taxa quilometragem</string>
    <string name="config_telefone">Telefone (Ligação)</string>
    <string name="config_whasapp">WhatsApp</string>
    <string name="config_email">Email (Opcional)</string>
    <string name="config_endereco">Endereço</string>
    <string name="geolocalizacao">Geolocalização</string>
    <string name="config_prazo_entrega">Prazo de entrega</string>
    <string name="editar">Editar</string>
    <string name="endereco">Endereço</string>
    <string name="config_horario">Adicione um horário ou deixe fechado</string>
    <string name="hora_aberto">Horário abertura</string>
    <string name="hora_fecha">Horário fechamento</string>
    <string name="atencao">Atenção</string>
    <string name="banir_desc">Ao banir o cliente, ele não poderá mais enviar e nem usar o aplicativo para sempre, não há volta. caso queira voltar ao usar o serviço vai precisar de uma nova conta.</string>
    <string name="digite_uma_msg">Digite uma mensagem para o cliente</string>
    <string name="app_exit">Sair do aplicativo</string>
    <string name="sair">Sair</string>
    <string name="configurar_notificação_push">Configurar notificação Push</string>
    <string name="sempre_que_seu_pedido_atualizar_voce_sera_notificado">Sempre que seu pedido atualizar não será notificado</string>
    <string name="sempre_que_seu_pedido_atualizar_voce_nao_sera_notificado">Sempre que seu pedido atualizar você não será notificado</string>
    <string name="title_notifications">Notificações</string>
    <string name="formato_da_data">Formato da data e hora</string>
    <string name="email">E-Mail</string>
    <string name="senha">Senha</string>
    <string name="preferencia_login">Preferencia de login</string>
    <string name="enter_email">Entre com o E-mail cadastrado para receber um email de recuperação</string>
</resources>