<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotomedium"
            android:layout_marginBottom="10dp"
            android:text="@string/enter_email"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_editor"
            app:errorEnabled="true"
            app:hintEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:drawablePadding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:hint="@string/email"
                android:singleLine="true"
                android:inputType="textVisiblePassword"
                android:background="@drawable/bg_editor"
                android:layout_width="match_parent"
                android:layout_height="55dp" />
        </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:text="@string/cancelar"
                android:background="@drawable/btn_acriligo_vermelho"
                android:textColor="@color/acriligo_tint_vermelho"
                android:textAllCaps="false"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/confirmar"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:text="@string/confirmar"
                android:background="@drawable/btn_acriligo_verde"
                android:textColor="@color/acriligo_tint_verde"
                android:textAllCaps="false"/>
        </RelativeLayout>
    </LinearLayout>
    </LinearLayout>
