<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/progress_circular"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"/>
        <LinearLayout
            android:id="@+id/layoutInicio"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/atencao"
                android:fontFamily="@font/gotham"
                android:textColor="@color/colorWindowBackground"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
            <TextView
                android:layout_margin="5dp"
                android:text="@string/banir_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:fontFamily="@font/gill_sans_mt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/messageBanir"
                android:background="@drawable/bg_editor"
                android:layout_width="match_parent"
                android:gravity="top"
                android:padding="10dp"
                android:fontFamily="@font/gill_sans_mt"
                android:hint="@string/digite_uma_msg"
                android:layout_height="280dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/cancelar"
                        android:background="@drawable/btn_acriligo_vermelho"
                        android:textColor="@color/acriligo_tint_vermelho"
                        android:textAllCaps="true"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/confirmar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/confirmar"
                        android:background="@drawable/btn_acriligo_verde"
                        android:textColor="@color/acriligo_tint_verde"
                        android:textAllCaps="true"/>
                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"/>

        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.cardview.widget.CardView>