<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/main_top"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/sair_titulo"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_margin="20dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textStyle="normal"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sair_msg"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:text="@string/cancelar"
                        android:background="@drawable/btn_acriligo_vermelho"
                        android:textColor="@color/acriligo_tint_vermelho"
                        android:textAllCaps="false"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/confirmar"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:text="@string/confirmar"
                        android:background="@drawable/btn_acriligo_verde"
                        android:textColor="@color/acriligo_tint_verde"
                        android:textAllCaps="false"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>