<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/endereco_config"
            app:errorEnabled="true"
            app:hintEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:drawablePadding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:hint="@string/endereco"
                android:singleLine="true"
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:background="@drawable/bg_editor"
                android:layout_height="55dp" />
        </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:text="@string/cancelar"
                android:background="@drawable/btn_acriligo_vermelho"
                android:textColor="@color/acriligo_tint_vermelho"
                android:textAllCaps="false"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/confirmar"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:text="@string/confirmar"
                android:background="@drawable/btn_acriligo_verde"
                android:textColor="@color/acriligo_tint_verde"
                android:textAllCaps="false"/>
        </RelativeLayout>
    </LinearLayout>

    </LinearLayout>
